# numeric_images_university

./: .gitignore  CMakeLists.txt  README.md
plot/: plot_1d.bash  plot_2d.bash
src/: main_trivial_matrices.cpp  utility.h
test/: CMakeLists.txt  test_vec.cpp  test_writeDat.cpp
